<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBgColor"
        tools:context=".DetailsPage">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:contentDescription="back to the main"
            android:focusable="true"
            android:onClick="backToTheMain"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_path"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/yourBalance"
            android:textColor="@color/baseText"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:fontFamily="@font/dm_sans"
            android:gravity="center_horizontal"
            android:text="@string/byThisTime"
            android:textColor="@color/baseText"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="169dp"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="370dp"
            android:layout_height="108dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/mainseback"
            android:elevation="20px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="26dp"
                android:alpha="0.8"
                android:fontFamily="@font/dm_sans"
                android:text="This month"
                android:textColor="@color/baseText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="70dp"
                android:alpha="0.8"
                android:fontFamily="@font/dm_sans"
                android:text="Last month"
                android:textColor="@color/baseText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginStart="62dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/thisMonth"
                android:textColor="@color/baseText"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView16"
                app:srcCompat="@drawable/ic_oval_copy" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="48dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/lastMonth"
                android:textColor="@color/baseText"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="17dp"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintTop_toBottomOf="@+id/textView17"
                app:srcCompat="@drawable/ic_oval_gray" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="Top Transaction"
            android:textColor="@color/baseText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="366dp"
            android:layout_height="255dp"
            android:layout_marginTop="34dp"
            android:background="@color/mainBgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="67dp"
                android:background="@color/stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="158dp"
                android:background="@color/stroke"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/stroke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="71dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionCategory1"
                android:textColor="@color/baseText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_mask"
                android:elevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="25dp"
                    android:layout_height="23dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_burger" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionPrice1"
                android:textColor="@color/baseText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="27dp"
                android:alpha="0.8"
                android:fontFamily="@font/dm_sans"
                android:text="@string/topTransactionDate1"
                android:textColor="@color/baseText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="71dp"
                android:layout_marginTop="91dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionCategory2"
                android:textColor="@color/baseText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="92dp"
                android:background="@drawable/ic_mask"
                android:elevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="25dp"
                    android:layout_height="23dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_house__2_" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="103dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionPrice2"
                android:textColor="@color/baseText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="118dp"
                android:alpha="0.8"
                android:fontFamily="@font/dm_sans"
                android:text="@string/topTransactionDate2"
                android:textColor="@color/baseText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginStart="71dp"
                android:layout_marginTop="187dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionCategory3"
                android:textColor="@color/baseText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="199dp"
                android:layout_marginEnd="1dp"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/topTransactionPrice3"
                android:textColor="@color/baseText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:layout_marginTop="214dp"
                android:alpha="0.8"
                android:fontFamily="@font/dm_sans"
                android:text="@string/topTransactionDate3"
                android:textColor="@color/baseText"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginTop="188dp"
                android:background="@drawable/ic_mask"
                android:elevation="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="25dp"
                    android:layout_height="23dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_burger" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="Top Category"
            android:textColor="@color/baseText"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="386dp"
            android:layout_height="232dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="45dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
