<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    android:visibility="visible"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="324dp"
        android:background="@color/topBgColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="111dp"
            android:layout_height="46dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/availableBalance"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:fontFamily="@font/dm_sans"
            android:text="Available balance"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="212dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="201dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/mainseback"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="94dp"
            android:alpha="0.2"
            android:background="#979797"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="31dp"
            android:layout_height="14dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="27dp"
            android:alpha="0.8"
            android:fontFamily="@font/dm_sans"
            android:text="Spent"
            android:textColor="@color/baseText"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="36dp"
            android:layout_height="14dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="91dp"
            android:alpha="0.8"
            android:fontFamily="@font/dm_sans"
            android:text="Earned"
            android:textColor="@color/baseText"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginStart="43dp"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/mainSpent"
            android:textColor="@color/baseText"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="31dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/mainEarned"
            android:textColor="@color/baseText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_oval" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="11dp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_oval_copy" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/dm_sans"
            android:text="@string/mainDescription"
            android:textColor="@color/baseText"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/dm_sans_bold"
            android:onClick="tellMeMore"
            android:text="@string/uString"
            android:textColor="@color/topBgColor"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/dm_sans_bold"
        android:text="Activity"
        android:textColor="@color/baseText"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="107dp"
        android:layout_height="114dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/mainseback"
        android:clickable="true"
        android:elevation="60dp"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/dm_sans"
            android:text="Earnings"
            android:textColor="@color/baseText"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_savings_fill0_wght400_grad0_opsz48" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="107dp"
        android:layout_height="114dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/mainseback"
        android:clickable="true"
        android:focusable="true"
        android:elevation="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/dm_sans"
            android:text="periodic pay"
            android:textColor="@color/baseText"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_autopay_fill0_wght400_grad0_opsz48" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="107dp"
        android:layout_height="114dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/mainseback"
        android:clickable="true"
        android:elevation="60dp"
        android:focusable="true"
        android:onClick="expenses"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:fontFamily="@font/dm_sans"
            android:text="Expenses"
            android:textColor="@color/baseText"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toTopOf="@+id/textView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_payments_fill0_wght400_grad0_opsz48" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>